# task-manager

./: README.md  pyproject.toml
task_manager/: cli.py  task.py  task_manager.py
tests/: test_task_manager.py
